--- a/src/app/persons/about.html
+++ b/src/app/persons/about.html
@@ -12,33 +12,41 @@
   <md-content>
     <md-tabs md-dynamic-height md-border-bottom>
       <md-tab class="md-tab-item" label="ABOUT">
-        <md-content class="md-padding">
+        <md-content>
 
           <skillset></skillset>
+          <hr/>
           <a-little-about-me></a-little-about-me>
+          <hr/>
           <certificates></certificates>
+          <hr/>
           <interests></interests>
+          <hr/>
           <daily-route></daily-route>
-          <experience></experience>
-          <worked-with-person></worked-with-person>
+          <hr/>
+          <experience ></experience>
+          <hr/>
+          <worked-with-person ></worked-with-person>
+          <hr/>
           <interesting-people></interesting-people>
 
         </md-content>
       </md-tab>
       <md-tab label="POINTS">
-        <md-content class="md-padding">
+        <md-content>
           <endorsements></endorsements>
         </md-content>
       </md-tab>
       <md-tab label="LEARNING">
-        <md-content class="md-padding">
+        <md-content>
           <skillcompetence></skillcompetence>
           <learning></learning>
         </md-content>
       </md-tab>
       <md-tab label="ACTIVITY">
-        <md-content class="md-padding">
-          <activity></activity>
+        <md-content>
+          <activity layout-padding></activity>
+          <hr/>
           <interesting-groups></interesting-groups>
         </md-content>
       </md-tab>
