--- a/src/app/persons/interestingpeople.html
+++ b/src/app/persons/interestingpeople.html
@@ -1,58 +1,4 @@
-<style>
-  #interestingPeople {
-    display: inline-block;
-    margin-bottom: 30px;
-    width: 100%;
-  }
-
-  #interestingPeople .item {
-    float: left;
-    text-align: center;
-    width: 16.666%;
-  }
-
-  #interestingPeople .item > img {
-    border: solid 2px white;
-    border-radius: 27px;
-    box-shadow: 0px 0px 2px #575B5D;
-    margin-bottom: 10px;;
-  }
-
-  /* Extra small devices (phones, less than 768px) */
-  /* No media query since this is the default in Bootstrap */
-
-  /* Small devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-    .item {
-      width: 10%;
-    }
-  }
-
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    #interestingPeople {
-      width: 35%;
-    }
-
-    .item {
-      width: 20%;
-    }
-  }
-
-  /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    .item {
-      width: 16.666%;
-    }
-  }
-</style>
-
-<div id="interestingPeople" style="border: solid 1px black;">
-  <h4>Interesting People</h4>
-
-  <div>
-    <div class="item" ng-repeat="interestingPerson in interestingPeople">
-      <img ng-src="{{interestingPerson.image}}"/>
-    </div>
-  </div>
+<div class="interestingpeople" layout-padding>
+  <h4 class="md-title">Interesting people</h4>
+  <md-button ng-repeat="item in [1,2,3,4,5,6,7,8]" aria-label="person {{item}}" class="md-fab md-mini" style="background-image:url('http://lorempixel.com/100/100/');"></md-button>
 </div>
