--- a/src/app/skills/skillset.html
+++ b/src/app/skills/skillset.html
@@ -80,25 +80,6 @@
     font-size: 12px;
   }
 
-  /* Extra small devices (phones, less than 768px) */
-  /* No media query since this is the default in Bootstrap */
-
-  /* Small devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-
-  }
-
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    #skillset {
-      width: 65%;
-    }
-  }
-
-  /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-
-  }
 </style>
 
 <script>
@@ -143,7 +124,7 @@
   });
 </script>
 
-<div id="skillset" style="border: solid 1px black;">
+<div id="skillset" layout-padding>
   <h4>SKILLSET <span class="subscript">(MONTHS EXPERIENCE)</span></h4>
 
   <div id="skillsetContainer">
