Updated Competence center with notifications and new design

--- a/src/app/persons/about.html
+++ b/src/app/persons/about.html
@@ -37,8 +37,8 @@
       </md-tab>
       <md-tab label="LEARNING">
         <md-content>
-          <skillcompetence></skillcompetence>
-          <learning></learning>
+          <skillcompetence style="z-index: 500"></skillcompetence>
+          <!--<learning></learning>-->
         </md-content>
       </md-tab>
       <md-tab label="ACTIVITY">
