--- a/src/app/skills/skillCompetences.html
+++ b/src/app/skills/skillCompetences.html
@@ -1,45 +1,95 @@
-<div>
-  <h4>Skill competences</h4>
+<md-toolbar ng-show="!showSearch">
+  <div class="md-toolbar-tools">
 
-  <div class="row">
-    <div class="col-lg-6">
-      <table class="table table-hover table-striped table-bordered">
-        <thead>
-        <tr>
-          <th>Name</th>
-          <th>Competence Level</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="skillCompetence in skillCompetences" ng-click="setSelected(skill)">
-          <td>{{skillCompetence.skill.name}}</td>
-          <td>{{skillCompetence.competenceLevel}}</td>
-          <td ng-click="remove(skillCompetence._links.self.href)">Delete</td>
-        </tr>
-        <tr>
-          <form name="addForm">
-            <td>
-              <input id="skill" class="form-control"
-                     ng-model="skillCompetence.skill" typeahead-no-results="noResults"
-                     typeahead="skill as skill.name for skill in skills"
-                     placeholder="Skill"/>
+    <h3>
+      Your Competences
+    </h3>
+    <span flex></span>
+    <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+      <ng-md-icon icon="search"></ng-md-icon>
+    </md-button>
 
-              <div ng-if="!skillCompetence.skill._links && skillCompetence.skill" class="alert alert-danger">Select a
-                skill from the list.
-              </div>
-            </td>
-            <td>
-              <input name="competenceLevel" ng-model="skillCompetence.competenceLevel" placeholder="Competence Level"
-                     id="competenceLevel" class="form-control" type="number">
-            </td>
-            <td>
-              <button class="btn btn-default" ng-click="save(skillCompetence)">Add</button>
-            </td>
-          </form>
-        </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
-  <hr>
-</div>
+
+</md-toolbar>
+<md-toolbar class="md-hue-1" ng-show="showSearch">
+  <div class="md-toolbar-tools">
+    <md-button ng-click="showSearch = !showSearch" aria-label="Back">
+      <ng-md-icon icon="arrow_back"></ng-md-icon>
+    </md-button>
+    <h3 flex="10">
+      Back
+    </h3>
+    <md-input-container md-theme="input" flex>
+      <label>&nbsp;</label>
+      <input ng-model="searchText" placeholder="enter search">
+    </md-input-container>
+    <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+      <ng-md-icon icon="search"></ng-md-icon>
+    </md-button>
+
+  </div>
+</md-toolbar>
+
+<md-data-table-container>
+  <table md-data-table md-progress="deferred">
+    <thead md-order="name" md-trigger="">
+    <tr>
+      <th name="Name"></th>
+      <th name="Level"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr md-auto-select ng-repeat="skillCompetence in skillCompetences | filter:searchText">
+
+      <td>{{skillCompetence.skill}}</td>
+      <td>{{skillCompetence.competenceLevel}}</td>
+      <td>
+        <md-button ng-hide="removeIt" ng-click="removeIt=true" class="md-icon-button md-accent">
+          <ng-md-icon style="color:red" icon="clear"></ng-md-icon>
+
+        </md-button>
+
+      </td>
+      <td>
+        <div ng-show="removeIt">
+          Are you sure?
+          <md-button ng-click="remove(skillCompetence)" class="md-icon-button">
+            <ng-md-icon style="color:green" icon="done"></ng-md-icon>
+          </md-button>
+          <md-button ng-click="removeIt=false" class="md-icon-button">
+            <ng-md-icon style="color:red" icon="clear"></ng-md-icon>
+          </md-button>
+        </div>
+
+      </td>
+
+    </tr>
+    <tr>
+      <form name="addForm">
+        <td>
+          <input id="skill" class="form-control" ng-model="skillCompetence.skill" typeahead-no-results="noResults"
+                 typeahead="skill as skill.name for skill in skills | filter:$viewValue | limitTo:8"
+                 placeholder="Skill">
+
+
+        </td>
+        <td>
+          <input name="competenceLevel" ng-model="skillCompetence.competenceLevel" placeholder="Competence Level"
+                 id="competenceLevel" class="form-control" type="number" min="1">
+
+        </td>
+        <td>
+          <md-button class="md-raised md-primary" ng-click="save(skillCompetence)">Add</md-button>
+        </td>
+        <td></td>
+
+      </form>
+    </tr>
+    <tr></tr>
+    <tr></tr>
+    </tbody>
+  </table>
+
+</md-data-table-container>
+
