Added external css files and admin page

--- a/src/app/persons/about.html
+++ b/src/app/persons/about.html
@@ -1,13 +1,3 @@
-<style>
-  .md-tab:hover {
-    color: #E98300;
-  }
-
-  .md-tab:active {
-    color: #E98300;
-  }
-</style>
-
 <div ng-cloak>
   <md-content>
     <md-tabs md-dynamic-height md-border-bottom>
@@ -37,7 +27,7 @@
       </md-tab>
       <md-tab label="LEARNING">
         <md-content>
-          <skillcompetence style="z-index: 500"></skillcompetence>
+          <skillcompetence></skillcompetence>
           <!--<learning></learning>-->
         </md-content>
       </md-tab>
