--- a/src/app/persons/activity.html
+++ b/src/app/persons/activity.html
@@ -1,99 +1,4 @@
-<style>
-  .activities-bar {
-    background: darkorange;
-    width: 2px;
-    height: 100%;
-    margin-left: 20px;
-    position: absolute;
-  }
-
-  .activities {
-    position: relative;
-  }
-
-  .activity-item-point {
-    z-index: 10;
-    margin: auto 4px;
-    width: 35px;
-    min-width: 35px;
-    height: 35px;
-    background: white;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-  }
-
-  .activity-item-point ng-md-icon {
-    margin: 2px;
-    width: 31px;
-    height: 31px;
-  }
-
-  .activity-item {
-    transition: .5s;
-  }
-
-  .activity-item h5 {
-    margin: 5px 0;
-  }
-
-  .activity-item-date {
-    color: darkgrey;
-    fill: darkgrey;
-    margin: 3px 0;
-  }
-
-  .orange-color {
-    color: darkorange;
-  }
-
-  .activities md-chips .md-chips {
-    float: right;
-    box-shadow: none;
-    padding: 0;
-    font-size: 12px;
-  }
-
-  .activities .md-chips:not(.md-readonly) .md-chip {
-    padding-right: 12px;
-  }
-
-  .activities md-chips.md-default-theme, md-chips .md-chip {
-    background: darkorange;
-    color: white;
-  }
-
-  .activities .md-chips .md-chip {
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    margin: 0px 3px 3px 0;
-    height: 28px;
-    line-height: 28px;;
-  }
-
-  .activities .md-chips .md-chip .md-chip-content {
-    padding-right: 0;
-  }
-
-  .activities md-card {
-    position: relative;
-  }
-
-  .activities md-card:before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: -14px;
-    margin-top: -7px;
-    height: 0;
-    width: 0;
-    border: 7px solid transparent;
-    border-right: 7px solid #E4E4E4;
-  }
-</style>
-
-<div class="activities">
+<div class="activities" ng-cloak>
   <h4 class="md-title">Activity</h4>
 
   <div layout="column">
