--- a/src/app/authentication/login.html
+++ b/src/app/authentication/login.html
@@ -1,11 +1,6 @@
-
-<div class="container">
-
-
-  <div class="row">
+<div id="login" class="row">
     <div class="col-sm-6 col-md-4 col-md-offset-4">
       <h1 class="text-center login-title">360 Tool</h1>
-
       <div>
         <form class="form-signin">
           <md-content>
@@ -27,9 +22,6 @@
         </form>
       </div>
     </div>
-  </div>
-
 </div>
-
 
 
