--- a/src/app/persons/certificates.html
+++ b/src/app/persons/certificates.html
@@ -1,53 +1,13 @@
-<style>
-  #certificates {
-    display: inline-block;
-    margin-bottom: 30px;
-    width: 100%;
-  }
-
-  #certificatesContainer {
-
-  }
-
-  .certificatesItem {
-    float: left;
-    height: 150px;
-    padding: 5px;
-    text-align: center;
-    width: 33.333%;
-  }
-
-  .certificatesItem img {
-    border: solid 5px #E98321;
-    border-radius: 40px;
-    height: 80px;
-    width: 80px;
-  }
-
-  .certificatesItem p {
-    color: #797478;
-    font: 9px/1.5 Verdana, Helvetica, sans-serif;
-    margin-top: 5px;
-    margin-right: auto;
-    margin-left: auto;
-    text-transform: uppercase;
-    width: 80px;
-  }
-</style>
-
-<div id="certificates" layout-padding>
+<div id="certificates" layout-padding ng-cloak>
   <h4>CERTIFICATES</h4>
-
   <div ng-if="certificates === null || certificates.length === 0">
     <p>
       There are no certificates yet.
     </p>
   </div>
-
   <div id="certificatesContainer" ng-if="certificates !== null && certificates.length !== 0">
     <div class="certificatesItem" ng-repeat="certificate in certificates">
       <img ng-src="{{certificate.image}}" alt="Certificate"/>
-
       <p>
         {{certificate.description}}
       </p>
