--- a/src/app/persons/dailyroute.html
+++ b/src/app/persons/dailyroute.html
@@ -1,32 +1,6 @@
-<style>
-  md-switch {
-    margin: 15px 0;
-  }
-
-  md-switch.md-default-theme.md-checked, md-switch.md-checked .md-thumb {
-    background-color: white;
-  }
-
-  md-switch.md-default-theme.md-checked, md-switch.md-checked .md-bar {
-    background-color: darkorange;
-  }
-
-  .transport-modes {
-    float: right;
-  }
-
-  .transport-modes .md-button {
-    min-width: 24px;
-    margin: 2px;
-  }
-
-  .active-transport-mode ng-md-icon {
-    fill: darkorange;
-  }
-</style>
-
 <div class="daily-route" layout-padding
-     ng-init="initPlaces(aLittleAboutMe.address.street + ' ' + aLittleAboutMe.address.city, dailyRoute.route.arrival);">
+     ng-init="initPlaces(aLittleAboutMe.address.street + ' ' + aLittleAboutMe.address.city, dailyRoute.route.arrival);"
+     ng-cloak>
   <div class="transport-modes">
     <md-button aria-label="transport mode car"
                title="Car"
@@ -35,7 +9,6 @@
                ng-class="{'active-transport-mode': transport == 'DRIVING'}">
       <ng-md-icon icon="directions_car"></ng-md-icon>
     </md-button>
-
     <md-button aria-label="transport mode bike"
                title="Bike"
                class="md-raised"
@@ -44,14 +17,11 @@
       <ng-md-icon icon="directions_bike"></ng-md-icon>
     </md-button>
   </div>
-
   <h4 class="md-title">Daily route</h4>
-
   <md-switch ng-model="state" md-no-ink aria-label="Switch 6" ng-change="onChange(state)">
     Custom directions
   </md-switch>
-
-  <div layout="column" style="margin:20px 0;" ng-show="!state">
+  <div layout="column" class="overview" ng-show="!state">
     <span>{{aLittleAboutMe.address.city}} &#10140; {{dailyRoute.route.arrival}}</span>
     <br/>
     <span><b>Working at:</b></span>
@@ -62,8 +32,7 @@
     <span><b>On-site:</b> 8:00 - 17:00</span>
     <span><b>Travelling by <span ng-show="transport == 'DRIVING'">car</span><span ng-show="transport == 'BICYCLING'">bike</span>:</b> {{map.directionsRenderers[0].directions.routes[0].legs[0].distance["text"]}} - {{map.directionsRenderers[0].directions.routes[0].legs[0].duration["text"]}}</span>
   </div>
-
-  <div layout="column" style="margin:20px 0;" ng-show="state">
+  <div layout="column" class="overview" ng-show="state">
     <md-input-container>
       <label>Starting point</label>
       <input places-auto-complete types="['geocode','establishment']" ng-model="mapStart" placeholder=""/>
@@ -74,12 +43,10 @@
     </md-input-container>
     <span><b>Travelling by <span ng-show="transport == 'DRIVING'">car</span><span ng-show="transport == 'BICYCLING'">bike</span>:</b> {{map.directionsRenderers[0].directions.routes[0].legs[0].distance["text"]}} - {{map.directionsRenderers[0].directions.routes[0].legs[0].duration["text"]}}</span>
   </div>
-
   <map zoom="4"
        style="width:100%;height:300px"
        map-type-control="false"
        scrollwheel="false">
-
     <directions
       draggable="false"
       travel-mode="{{transport}}"
