--- a/src/app/persons/workedwithperson.html
+++ b/src/app/persons/workedwithperson.html
@@ -1,4 +1,5 @@
 <div class="workedwith" layout-padding>
   <h4 class="md-title">Worked with {{myDetails.firstName}}</h4>
-  <md-button ng-repeat="item in [1,2,3,4,5,6,7,8]" aria-label="person {{item}}" class="md-fab md-mini" style="background-image:url('http://lorempixel.com/100/100/');"></md-button>
+  <md-button ng-repeat="item in [1,2,3,4,5,6,7,8]" aria-label="person {{item}}" class="md-fab md-mini"
+             class="workedWithButton"></md-button>
 </div>
